--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
 /* Font Logo */
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Pirata+One&display=swap');
 .bebas-neue-regular {
-  font-family: "Bebas Neue", serif;
+  font-family: "Bebas Neue", sans-serif;
   font-weight: 400;
   font-style: normal;
 }
